--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:       swiftdatum
 email:       swiftdatumscience@gmail.com
 author:      Ivan Lazarevich and Ilya Prokin
 description: "A blog about Data Science, Machine Learning, and Artificial Intelligence."
-url: swiftdatum.github.io
+url: http://swiftdatum.github.io
 baseurl: ""
 date_format: "%b %-d, %Y"
 header_pages:
@@ -69,17 +69,17 @@ telegram_username:
 vk_id:
 
 # Post sharing icons
-show_sharing_icons: false
+show_sharing_icons: true
 # Change to 'true' to enable individual icons
-share_facebook: false
-share_twitter: false
-share_googleplus: false
-share_linkedin: false
+share_facebook: true
+share_twitter: true
+share_googleplus: true
+share_linkedin: true
 share_digg: false
 share_tumblr: false
-share_reddit: false
+share_reddit: true
 share_stumbleupon: false
-share_hackernews: false
+share_hackernews: true
 
 text:
   pagination:
@@ -116,8 +116,6 @@ text:
 
 # Build settings
 markdown:     kramdown
-redcarpet:
-  extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
 paginate:     4
 sass:
