--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:       swiftdatumscience@gmail.com
 author:      Ivan Lazarevich and Ilya Prokin
 description: "A blog about Data Science, Machine Learning, and Artificial Intelligence."
 url: "https://swiftdatum.github.io"
-baseurl: "https://swiftdatum.github.io"
+baseurl: ""
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
