--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,7 @@ sass:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-postfiles
 # https://github.com/jekyll/jekyll/issues/2938
 exclude:
   - Gemfile
