Easy life with Makefile

--- a/_config.yml
+++ b/_config.yml
@@ -123,9 +123,9 @@ sass:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-postfiles
 # https://github.com/jekyll/jekyll/issues/2938
 exclude:
   - Gemfile
   - Gemfile.lock
   - vendor
+  - Makefile
